# rohbau-annotator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.ipynb
src/rohbau_annotator/: __init__.py  annotator.py  classes.py  cli.py  exporters.py  importers.py  loader.py  projection.py  sam_assistant.py
src/rohbau_annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_classes.py  test_cli.py  test_exporters.py  test_importers.py  test_loader.py  test_projection.py  test_sam_assistant.py
